Button de comprar na home

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -297,6 +297,7 @@
 					doação de qualquer valor.</span>
 					<br /><br />
 					<a href="#" class="btn btn-docs">DOAR (PAYPAL)</a>
+					<a href="#/store" class="btn btn-docs">COMPRE E AJUDE</a>
 				</div>
 			</div>
 		</div>
