--- a/app/views/about.html
+++ b/app/views/about.html
@@ -9,18 +9,13 @@
 	<div class="container container-body">
 		<div class="grid grid-12">
 			<div class="docs-content ">
-				<h1>Missão</h1>
+				<h1>Visão geral</h1>
 				<p>Pretendemos levar o Kep Framework para todos e mostrar de forma clara para iniciantes, como é o desenvolvimento de uma framework e como podem aumentar a produtividade com Kep.</p>
-				<h1>Equipe</h1>
-				<p>Kep Framework foi iniciado por um desenvolvedor, com a mesma curiosidade de aprender como é um funcionamento de uma framework, utilizando como view o AngularJS.</p>
-				<p>Matuzalém S. Teles - <a href="https://github.com/matuzalemsteles">GitHub</a> | <a href="https://twitter.com/MatuzalemTeles">Twitter</a></p>
-				<h1>Ínicio</h1>
-				<p>Matuzalém S. Teles: O Kep Framework, começou quando estava em um desenvolvimento de um projeto próprio, onde estava trabalhando em uma grande atualização.</p>
-				<p>Precisava de uma framework para agilizar no desenvolvimento da aplicação. E como eu tinha duvidas sobre o funcionamento de uma Framework e como se trabalhar com a mesma, fiz um desafio a mim próprio, criar uma pequena framework que serviria para a criação de API, para ser consumida pelo AngularJS.</p>
-				<p>Comecei a estudar mais sobre framework e ler a documentação do <a href="http://laravel.com/docs">Laravel</a>, boa parte me inspirei na framework Laravel. De acordo a criação de framework e na atualização do meu projeto, fui colocando algumas ferramentas com a necessidade da aplicação.</p>
-				<p>Até então o momento não planejava disponibilizar a framework, então com o tempo fui gostando de programar mais ainda com a framework e decidir disponibilizar e continuar atualizanda a mesma, criando um site robusto, para a documentação simplificada e o propósito da mesma, para os iniciantes.</p>
+				<p>Kep Framework foi iniciado por um desenvolvedor, com a mesma curiosidade de aprender como é um funcionamento de uma framework, utilizando como view o AngularJS, entre outros.</p>
+				<h1>Criadores</h1>
+				<p>Matuzalém S. Teles - <a href="https://github.com/matuzalemsteles" target="_blank">GitHub</a> | <a href="https://twitter.com/MatuzalemTeles" target="_blank">Twitter</a></p>
 				<h1>Contribuintes</h1>
-				<p>Matuzalém S. Teles - <a href="https://github.com/matuzalemsteles">GitHub</a></p>
+				<p><a href="https://github.com/KepPHP/Kep" target="_blank">Quero contribuir</a></p>
 			</div>
 		</div>
 	</div>
