--- a/app/views/query-builder.html
+++ b/app/views/query-builder.html
@@ -26,6 +26,11 @@
 							<li class="active"><a href="#/docs/query-builder">Query Builder</a></li>
 						</ul>
 					</li>
+					<li>Security
+						<ul>
+							<li><a href="#/docs/headers">Headers</a></li>
+						</ul>
+					</li>
 					<li>Serviços
 						<ul>
 							<li><a href="#/docs/seeds">Seeds</a></li>
