Adicionando postagem do Medium

--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -9,7 +9,7 @@
 	<div class="container container-body">
 		<div class="grid grid-12">
 			<div class="docs-content ">
-				
+				<script async src="https://static.medium.com/embed.js"></script><a class="m-story" data-collapsed="true" href="https://medium.com/@matuzalemteles/kep-framework-for-php-7b780633d2c8">Kep Framework for PHP</a>
 			</div>
 		</div>
 	</div>
