Adicionando organização das pastas do kep

--- a/app/views/docs.html
+++ b/app/views/docs.html
@@ -85,6 +85,10 @@
 					</span>
 					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+						<span>├─ headers/</span>
+					</span>
+					<span class="php-line">
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span>├─ model/</span>
 					</span>
 					<span class="php-line">
@@ -236,6 +240,10 @@
   						<span>│</span>
 						<span>&nbsp;&nbsp;</span>
 						<span>├─ database/</span>
+					</span>
+					<span class="php-line">
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+						<span>├─ headers/</span>
 					</span>
 					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
   						<span>│</span>
