--- a/app/views/docs.html
+++ b/app/views/docs.html
@@ -113,6 +113,13 @@
 					</span>
 					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+						<span class="php-string">'directory'</span>
+						<span>=></span>
+						<span class="php-string">"v1"</span>
+						<span>,</span>
+					</span>
+					<span class="php-line">
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
 						<span class="php-string">'connections'</span>
 						<span>=></span>
 						<span>[</span>
@@ -209,6 +216,7 @@
 						<span>];</span>
 					</span>
 				</div>
+				<p>Você pode configurar o nome da pasta onde está localizado a API no 'directory'.</p>
 				<h1>Iniciando API</h1>
 				<p>Para o funcionamento correto da aplicação é preciso criar uma pasta chamada de “v1”  e criar
 				as pasta subsequentes para o uso do controller e model. nossa estrutura de nossa aplicação
