Melhorando explicação "Iniciando API"

--- a/app/views/docs.html
+++ b/app/views/docs.html
@@ -218,9 +218,7 @@
 				</div>
 				<p>Você pode configurar o nome da pasta onde está localizado a API no 'directory'.</p>
 				<h1>Iniciando API</h1>
-				<p>Para o funcionamento correto da aplicação é preciso criar uma pasta chamada de “v1”  e criar
-				as pasta subsequentes para o uso do controller e model. nossa estrutura de nossa aplicação
-				fica assim.</p>
+				<p>Para o funcionamento correto de nossa aplicação, criamos um segunda pasta e nomeamos com qualquer nome(O nome é o mesmo digitado na configuração), a estrutura de nossa aplicação fica assim.</p>
 				<div class="code docs">
 					<span class="php-line">
 						<span>api/</span>
