Corrigindo estrutura da aplicação na header

--- a/app/views/docs.html
+++ b/app/views/docs.html
@@ -247,8 +247,9 @@
 						<span>&nbsp;&nbsp;</span>
 						<span>├─ database/</span>
 					</span>
-					<span class="php-line">
-						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+  						<span>│</span>
+						<span>&nbsp;&nbsp;</span>
 						<span>├─ headers/</span>
 					</span>
 					<span class="php-line"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
