--- a/app/views/query-builder.html
+++ b/app/views/query-builder.html
@@ -211,9 +211,9 @@
 						<span class="php-string">'SELECT * FROM Users WHERE Nome = ?'</span>
 						<span>, [</span>
 						<span class="php-string">'Matuzalem'</span>
-						<span>], [</span>
+						<span>], </span>
 						<span class="php-string">'ORDER BY id DESC LIMIT 1'</span>
-						<span>]);</span>
+						<span>);</span>
 					</span>
 				</div>
 			</div>
