--- a/app/views/routing.html
+++ b/app/views/routing.html
@@ -5,7 +5,7 @@
 				<span>Aprenda como utilizar o Kep Framework</span>
 			</div>
 			<div class="right">
-				<a href="https://github.com/KepPHP/Kep/archive/v0.1-alpha.zip" class="btn btn-download"><span>ALPHA</span>DOWNLOAD V0.1</a>
+				<a href="https://github.com/KepPHP/Kep/releases/tag/v0.1.1-alpha" class="btn btn-download"><span>ALPHA</span>DOWNLOAD V0.1</a>
 			</div>
 		</div>
 	</div>
