Correção de palavras e termos.

--- a/app/views/headers.html
+++ b/app/views/headers.html
@@ -48,7 +48,7 @@
 		<div class="grid grid-8">
 			<div class="docs-content">
 				<h1>Headers</h1>
-				<p>Para podemos melhorar a segurança de nossas APIs, utilizamos as Headers ao nosso favor. O Kep tem pequenas configurações da Header, não ínsita em contribuir para podermos melhorar.</p>
+				<p>Para podermos melhorar a segurança de nossas APIs, utilizamos as Headers ao nosso favor. O Kep tem pequenas configurações da Header, não deixe de contribuir para podermos melhorar.</p>
 				<h1>Access control allow origin</h1>
 				<p>Com isto podemos definir, qual domínio ou ip pode acessar a nossa API ou liberar com uso do "*".</p>
 				<div class="code docs">
