Correção de escrita do texto da view Headers.

--- a/app/views/headers.html
+++ b/app/views/headers.html
@@ -50,7 +50,7 @@
 				<h1>Headers</h1>
 				<p>Para podermos melhorar a segurança de nossas APIs, utilizamos as Headers ao nosso favor. O Kep tem pequenas configurações da Header, não deixe de contribuir para podermos melhorar.</p>
 				<h1>Access control allow origin</h1>
-				<p>Com isto podemos definir, qual domínio ou ip pode acessar a nossa API ou liberar com uso do "*".</p>
+				<p>Com isso, podemos definir qual domínio ou ip pode acessar a nossa API ou liberar com uso do "*".</p>
 				<div class="code docs">
 					<span class="php-line">
 						<span class="php-keyword">require_once</span>
@@ -110,7 +110,7 @@
 					</span>
 				</div>
 				<h1>Content type</h1>
-				<p>Podemos definir os dados que a API, pode receber, confira em ação.</p>
+				<p>Podemos definir os dados que a API pode receber. Confira em ação.</p>
 				<div class="code docs">
 					<span class="php-line">
 						<span class="php-keyword">use</span>
