Adicionando os créditos da página Envolva-se

--- a/app/views/get-involved.html
+++ b/app/views/get-involved.html
@@ -119,6 +119,8 @@
 				<p>Ajude a melhorar a nossa framework, utilizando bons modos de escrita e performance.</p>
 				<h2 id="newfunctions">Novas funções</h2>
 				<p>Penso em algo que possa mudar a forma como vemos o Kep? ou um nova função, contribua.</p>
+				<h1 id="credits">Créditos</h1>
+				<p>Está página foi baseada no website do <a href="https://elementary.io/pt_BR/get-involved">Elementary OS</a> (Um substituto rápido e gratuito ao Windows e OS X), também utilizamos e aproveita e contribua com o projeto =D.</p>
 			</div>
 		</div>
 	</div>
