--- a/app/views/docs.html
+++ b/app/views/docs.html
@@ -5,7 +5,7 @@
 				<span>Aprenda como utilizar o Kep Framework</span>
 			</div>
 			<div class="right">
-				<a href="https://github.com/KepPHP/Kep/releases/tag/v0.1.1-alpha" class="btn btn-download"><span>ALPHA</span>DOWNLOAD V0.1</a>
+				<a href="#/docs#installation" class="btn btn-download"><span>BETA</span>DOWNLOAD V0.2</a>
 			</div>
 		</div>
 	</div>
@@ -53,7 +53,7 @@
 				com uma boa performance e agilidade.</p>
 				<p>Conta com sistemas de Rotas, Controles e modelos e a facilidade de conexão com o banco de
 				dados MySQL.</p>
-				<h1>Instalação</h1>
+				<h1 id="installation">Instalação</h1>
 				<p>Faça o download do Kep Framework no topo da página e siga os passos para a configuração.</p>
 				<h1>Configuração</h1>
 				<p>Para criação basica de uma simples API com Kep Framework é preciso adicionar os arquivos 
