Atualizando documentação v0.2.0-beta

--- a/app/views/authentication.html
+++ b/app/views/authentication.html
@@ -57,7 +57,7 @@
 				<p>Para configurar o sistema de autenticação é preciso altear no arquivo do Kep.</p>
 				<div class="code docs">
 					<span class="php-line">
-						<span>kep/config/config.php</span>
+						<span>vendor/kepphp/kep/src/config/config.php</span>
 					</span>
 				</div>
 				<div class="code docs">
