--- a/app/views/controller.html
+++ b/app/views/controller.html
@@ -55,7 +55,7 @@
 				<div class="code docs">
 					<span class="php-line">
 						<span class="php-keyword">use</span>
-						<span>controller\BaseController;</span>
+						<span>KepPHP\Kep\controller\BaseController;</span>
 					</span>
 					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -156,7 +156,7 @@
 				<div class="code docs">
 					<span class="php-line">
 						<span class="php-keyword">use</span>
-						<span>controller\BaseController;</span>
+						<span>KepPHP\Kep\controller\BaseController;</span>
 					</span>
 					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
