--- a/app/views/model.html
+++ b/app/views/model.html
@@ -56,11 +56,11 @@
 				<div class="code docs">
 					<span class="php-line">
 						<span class="php-keyword">use</span>
-						<span>database\DB;</span>
+						<span>KepPHP\Kep\database\DB;</span>
 					</span>
 					<span class="php-line">
 						<span class="php-keyword">use</span>
-						<span>model\BaseModel;</span>
+						<span>KepPHP\Kep\model\BaseModel;</span>
 					</span>
 					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
@@ -90,7 +90,7 @@
 				<div class="code docs">
 					<span class="php-line">
 						<span class="php-keyword">use</span>
-						<span>controller\BaseController;</span>
+						<span>KepPHP\Kep\controller\BaseController;</span>
 					</span>
 					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
