--- a/app/views/routing.html
+++ b/app/views/routing.html
@@ -56,7 +56,7 @@
 					<span class="php-line">
 						<span class="php-keyword">require_once</span>
 						<span>(</span>
-						<span class="php-string">"../kep/autoload.php"</span>
+						<span class="php-string">"../vendor/autoload.php"</span>
 						<span>);</span>
 					</span>
 					<span class="php-line">
@@ -64,7 +64,7 @@
 					</span>
 					<span class="php-line">
 						<span class="php-keyword">use</span>
-						<span>route\Route;</span>
+						<span>KepPHP\Kep\route\Route;</span>
 					</span>
 					<span class="php-line">
 						<span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
