Atualizando informação de instalação

--- a/app/views/docs.html
+++ b/app/views/docs.html
@@ -57,9 +57,10 @@
 				<p>Instalação pelo composer, certifique-se de ter <a href="https://getcomposer.org/">Composer</a> instalado em sua máquina.</p>
 				<div class="code docs">
 					<span class="php-line">
-						<span>composer require kepphp/kep</span>
+						<span>composer require kepphp/kep v0.2.1-beta</span>
 					</span>
 				</div>
+				<p>Acompanhe as versões em nosso <a href="https://github.com/KepPHP/Kep/releases">repositório</a> no Github e lembre sempre em instalar a última versão.</p>
 				<h1>Configuração</h1>
 				<p>Depois da instalação do Kep com composer em uma pasta, precisamos criar uma nova pasta com qualquer nome(Certifique-se de adicionar este nome na configuração do Kep).</p>
 				<p>Abra a pasta e crie mais 3, com os nomes controllers, models e seeds. a arquitetura de nossa aplicação fica assim:</p>
